--- a/_includes/blocks/smarter-money.html
+++ b/_includes/blocks/smarter-money.html
@@ -1,15 +1,15 @@
 <p>
-circum.world changes the rules of the game in traditional banking & payments space by putting you, the consumer at the centre of the digital economy.
+circum.world changes the rules of the game in the traditional banking and payments space by putting you, the consumer, at the centre of the digital economy.
 </p>
 <p>
-Blockchain coupled with real world technology deployment expertise, enabling a transformative value exchange network. Redefining the banking & payments ecosystem that will drive billions of people into financial participation and inclusion across a commerce community.
+Blockchain, coupled with real world technology deployment expertise, will enable a transformative value exchange network. This will redefine the banking and payments ecosystem tol drive billions of people into financial inclusion and participation across a commerce community.
 </p>
 <p>
-Much more than a payments provider, circum.world will utilize its tokenisation model to evolve the digital economy into the Intersection eConomy, where the digital, mobile, social and physical worlds of commerce all connect.
+Much more than a payments provider, circum.world will utilize its tokenisation model to evolve the digital economy into the Intersection eConomy where the digital, mobile, social and physical worlds of commerce connect.
 </p>
 <p>
-Providing individuals direct management over their personal finances, consumer data and allowing any two parties (peers in the network) to seamlessly exchange, pay or trade multiple levels of stored value in a frictionless point-to-point fashion.
+Our solution will give individuals control over their personal finances and consumer data, allowing any two parties (peers in the network) to seamlessly exchange, pay or trade multiple levels of stored value in a frictionless point-to-point interaction.
 </p>
 <p>
-Unleashing the power of digital currencies by making money online smarter and more valuable through extensibility. Power-to-People (P2P)
+We will unleash the power of digital currencies by making money online smarter and more valuable through extensibility. Power-to-People (P2P).
 </p>
