--- a/_includes/blocks/the-problem.html
+++ b/_includes/blocks/the-problem.html
@@ -1,12 +1,9 @@
 <p>
-Billions of people around the world do not have adequate or in many cases, any access to traditional banking or payment systems. Leaving them disadvantaged and effectively on the side-lines of the digital economy. THE UNBANKED
+Billions of people around the world do not have adequate or, in many cases, any access to traditional banking or payment systems. This leaves them disadvantaged and effectively on the sidelines of the digital economy.
 </p>
 <p>
-Traditional banking & payment industries have attempted to evolve through digitalization, but have neither been overly innovative nor disruptive in their application, instead staying within their own comfort zones.
+Traditional banking and payment industries have attempted to evolve through digitalization. They have been neither innovative nor disruptive in their application, staying within their comfort zones. For the most part their innovation to date has been simply taking services “online” with little change or advancement in business models or systems.  In essence, this is driven by an internal need for self-preservation, through the cornering of the established markets and their continued efforts to reinforce relevance, neither of which are in the best interests of their customers.
 </p>
 <p>
-For the most part their innovation to date has been simply taking services “online” with little change or advancement in business models or systems. In essence, this is driven by an internal need for self-preservation, through the cornering of the established markets and their continued efforts to reinforce relevance, neither of which are in the best interests of consumers or customers.
-</p>
-<p>
-Western banking models have become today’s “legacy” model, consisting of aging infrastructure and bloated value chains, where “advancements” just hide increasing complexities, whilst magnifying costs, risks, security holes and ultimately masking the growing separation between buyers and sellers.
+Western banking models have become today’s “legacy” model, consisting of aging infrastructure and bloated value chains, where “advancements” just hide increasing complexities, whilst magnifying costs, risks and security holes. Ultimately this masks the growing separation between buyers and sellers.
 </p>
