--- a/_includes/blocks/the-solution.html
+++ b/_includes/blocks/the-solution.html
@@ -1,21 +1,21 @@
 <p>
-circum.world offers a clean slate & leapfrog opportunity to provide a highly scalable commerce community, built on the blockchain for the new digital cash economy. This new Intersection eConomy not only allows everyone to participate it further ties payments to rewards, providing additional earning opportunities for continuing to positively engage with the community or 3rd party sponsored placements.
+Circum offers a clean slate and leapfrog opportunity to provide a highly scalable commerce community, built on the blockchain for the new digital cash economy. This new Intersection eConomy not only allows everyone to participate, it further ties payments to rewards and provides additional earning opportunities for continuing to positively engage with the community or 3rd party sponsored placements.
 </p>
 <p>
-A community platform which provides an innovative value exchange network to help users to easily navigate the rapidly growing Intersection eConomy allowing simultaneous management across mobile digital, social and physical worlds of commerce, via a blockchain enabled network. The mobile finance App operates collectively as a commerce community and individually as a multi-value management SoV (Store of Value)
+circum.world is a community platform which provides an innovative value exchange network to help users to easily navigate the rapidly growing Intersection eConomy.  This allows simultaneous management across mobile, digital, social and physical worlds of commerce via a blockchain enabled network. The mobile finance App operates collectively as a commerce community and individually as a multi-value management Store of Value wallet.
 </p>
 <p>
-Redefining the value through the lens of digitalization, it allows people to store, hold and trade with multiple types of value. (e.g. fiat currency, cryptocurrency-tokens, exclusive offers as digital collectibles).
+Redefining the value through the lens of digitalization, circum.world allows people to store, hold and trade with multiple types of value (e.g. fiat currency, cryptocurrency-tokens, exclusive offers as digital collectibles).
 </p>
 <p>
-circum.worlds go-to-market strategy will be to launch in the developing markets, where the team has a proven track record. Offering the opportunity to directly empower billions of more participants, while providing additional value through extensibility of digital currencies.
+Circum’s go-to-market strategy will be to launch in the developing markets where the team has a proven track record. Offering the opportunity to directly empower billions of participants, while providing additional value through extensibility of digital currencies.
 </p>
 <p>
-Augmenting traditional payments business model by interposing sponsored marketing and advertising spends to reward consumers for reach, access or call to action opportunities.
+Circum augments the traditional payments business model by interposing sponsored marketing and advertising spends to reward consumers for reach, access or call to action opportunities.
 </p>
 <p>
-circum.world opens up a new world of opportunity to remove the friction in transacting and ushers in wider financial inclusion across a much tighter value chain. circum.world - turning the traditional payments & advertising models on their heads by allowing individuals to also earn for their time, attention or actions:
+circum.world opens up a new world of opportunity to remove the friction in transacting and ushers in wider financial inclusion across a much tighter value chain. circum.world - turning the traditional payments and advertising models on their heads by allowing individuals to also earn for their time, attention or actions.
 </p>
 <p>
-Finally, the internet working for you, you not working for the Internet.
+Finally, the internet working for you, not you working for the Internet.
 </p>
