--- a/_includes/blocks/features.html
+++ b/_includes/blocks/features.html
@@ -1,26 +1,26 @@
 <div class="row">
 	<div class="col-6 col-md-4 col-lg-2 p-4">
 		<img src="/assets/img/icons/zero.png" class="img-fluid p-3" />
-		ZERO to low (Merchant fees)
+		ZERO to low merchant fees
 	</div>
 	<div class="col-6 col-md-4 col-lg-2 p-4">
 		<img src="/assets/img/icons/exclusive.png" class="img-fluid p-3" />
-		Exclusive deals & offers post payment
+		Exclusive deals and offers post payment
 	</div>
 	<div class="col-6 col-md-4 col-lg-2 p-4">
 		<img src="/assets/img/icons/safe.png" class="img-fluid p-3" />
-		Safe, secure & free for Consumers
+		Safe, secure and free for consumers
 	</div>
 	<div class="col-6 col-md-4 col-lg-2 p-4">
 		<img src="/assets/img/icons/reward.png" class="img-fluid p-3" />
-		Reward for positive (community) participation
+		Reward for positive community participation
 	</div>
 	<div class="col-6 col-md-4 col-lg-2 p-4">
 		<img src="/assets/img/icons/transact.png" class="img-fluid p-3" />
-		Transact with multiple types of Value
+		Transact with multiple types of value
 	</div>
 	<div class="col-6 col-md-4 col-lg-2 p-4">
 		<img src="/assets/img/icons/earn.png" class="img-fluid p-3" />
-		Earn crypto rewards on each Purchase
+		Earn crypto rewards on each purchase
 	</div>
 </div>
