--- a/_includes/blocks/the-solution.html
+++ b/_includes/blocks/the-solution.html
@@ -8,7 +8,7 @@ circum.world is a community platform which provides an innovative value exchange
 Redefining the value through the lens of digitalization, circum.world allows people to store, hold and trade with multiple types of value (e.g. fiat currency, cryptocurrency-tokens, exclusive offers as digital collectibles).
 </p>
 <p>
-Circum’s go-to-market strategy will be to launch in the developing markets where the team has a proven track record. Offering the opportunity to directly empower billions of participants, while providing additional value through extensibility of digital currencies.
+Circum’s go-to-market strategy will be to launch in the developing markets first, where the team has a proven track record. Offering the opportunity to directly empower billions of participants, while providing additional value through extensibility of digital currencies.
 </p>
 <p>
 Circum augments the traditional payments business model by interposing sponsored marketing and advertising spends to reward consumers for reach, access or call to action opportunities.
