--- a/_includes/blocks/features.html
+++ b/_includes/blocks/features.html
@@ -13,7 +13,7 @@
 	</div>
 	<div class="col-6 col-md-4 col-lg-2 p-4">
 		<img src="/assets/img/icons/reward.png" class="img-fluid p-3" />
-		Reward for positive community participation
+		Reward for positive participation
 	</div>
 	<div class="col-6 col-md-4 col-lg-2 p-4">
 		<img src="/assets/img/icons/transact.png" class="img-fluid p-3" />
