--- a/_includes/blocks/smarter-money.html
+++ b/_includes/blocks/smarter-money.html
@@ -2,7 +2,7 @@
 circum.world changes the rules of the game in the traditional banking and payments space by putting you, the consumer, at the centre of the digital economy.
 </p>
 <p>
-Blockchain, coupled with real world technology deployment expertise, will enable a transformative value exchange network. This will redefine the banking and payments ecosystem tol drive billions of people into financial inclusion and participation across a commerce community.
+Blockchain, coupled with real world technology deployment expertise, will enable a transformative value exchange network. This will redefine the banking and payments ecosystem to drive billions of people into financial inclusion and participation across a commerce community.
 </p>
 <p>
 Much more than a payments provider, circum.world will utilize its tokenisation model to evolve the digital economy into the Intersection eConomy where the digital, mobile, social and physical worlds of commerce connect.
