--- a/_includes/blocks/smarter-money.html
+++ b/_includes/blocks/smarter-money.html
@@ -2,14 +2,14 @@
 circum.world changes the rules of the game in the traditional banking and payments space by putting you, the consumer, at the centre of the digital economy.
 </p>
 <p>
-Blockchain, coupled with real world technology deployment expertise, will enable a transformative value exchange network. This will redefine the banking and payments ecosystem to drive billions of people into financial inclusion and participation across a commerce community.
+Blockchain, coupled with real world technology deployment expertise, will enable a transformative value exchange network. This will redefine the banking and payments ecosystem to drive billions of people into financial participation across a disruptive commerce community.
 </p>
 <p>
 Much more than a payments provider, circum.world will utilize its tokenisation model to evolve the digital economy into the Intersection eConomy where the digital, mobile, social and physical worlds of commerce connect.
 </p>
 <p>
-Our solution will give individuals control over their personal finances and consumer data, allowing any two parties (peers in the network) to seamlessly exchange, pay or trade multiple levels of stored value in a frictionless point-to-point interaction.
+Commerce reimagined as a totally new world. Our solution will give individuals direct control over their own personal finances and consumer data, allowing any two parties (peers in the network) to seamlessly exchange, pay or trade multiple types of stored value in a frictionless point-to-point manner.
 </p>
 <p>
-We will unleash the power of digital currencies by making money online smarter and more valuable through extensibility. Power-to-People (P2P).
+Further unleashing the power of digital currencies by making money online smarter and more valuable through extensibility. Power-to- People (P2P).
 </p>
