--- a/_includes/blocks/the-problem.html
+++ b/_includes/blocks/the-problem.html
@@ -1,9 +1,9 @@
 <p>
-Billions of people around the world do not have adequate or, in many cases, any access to traditional banking or payment systems - The Unbanked. This leaves them disadvantaged and effectively on the sidelines of the digital economy.
+Billions of people around the world do not have adequate or, in many cases, any access to traditional banking or payment systems. This leaves them undeserved, disadvantaged and effectively sitting on the sidelines of the digital economy. (The unbanked)
 </p>
 <p>
-Traditional banking and payment industries have attempted to evolve through digitalization. They have been neither innovative nor disruptive in their application, staying within their comfort zones. For the most part their innovation to date has been simply taking services “online” with little change or advancement in business models or systems.  In essence, this is driven by an internal need for self-preservation, through the cornering of the established markets and their continued efforts to reinforce relevance, neither of which are in the best interests of their customers.
+At the same time, banking and payment industries have attempted to evolve through digitalization. They have been neither innovative nor disruptive in their advancements, instead choosing to remain within their comfort zone. Innovation to date has been simply taking services “online” with little change or advancement to business models or systems. In essence, this is driven by an internal need for self- preservation, through the cornering of the established markets and their continued efforts to reinforce relevance, none of which are in the best interests of their customers.
 </p>
 <p>
-Western banking models have become today’s “legacy” model, consisting of aging infrastructure and bloated value chains, where “advancements” just hide increasing complexities, whilst magnifying costs, risks and security holes. Ultimately this masks the growing separation between buyers and sellers.
+Western banking models have become today’s “legacy” model, consisting of aging infrastructure and bloated value chains, where “advancements” just hide increasing complexities, whilst magnifying costs, risks and security holes. Ultimately this masks a growing separation between buyers and sellers.
 </p>
