--- a/_includes/blocks/the-solution.html
+++ b/_includes/blocks/the-solution.html
@@ -5,17 +5,16 @@ circum.world offers a clean slate and leapfrog opportunity to provide a highly s
 circum.world is a community platform which provides an innovative value exchange network to help users to easily navigate the rapidly growing Intersection eConomy. This allows simultaneous management of value exchange across mobile, digital, social and physical worlds of commerce via a blockchain enabled network. The mobile finance app operates collectively as a commerce community and individually as a multi-value management Store of Value wallet.
 </p>
 <p>
-We’re bringing the blokchain and direct value management to your daily real life. Redefining the value through the lens of digitalization, by allowing people to store, hold and trade with multiple types of value (e.g. fiat currency, cryptocurrency-tokens, exclusive offers as digital collectibles).
+We're bringing the blokchain and direct value management to your daily real life. Redefining the value through the lens of digitalization, by allowing people to store, hold and trade with multiple types of value (e.g. fiat currency, cryptocurrency-tokens, exclusive offers as digital collectibles).
 </p>
 <p>
-circum.world’s go-to-market strategy will be to initially launch in developing markets, where the team has a proven track record. Offering the opportunity to directly empower billions of participants, while providing additional value through extensibility of digital currencies.
+circum.world's go-to-market strategy will be to initially launch in developing markets, where the team has a proven track record. Offering the opportunity to directly empower billions of participants, while providing additional value through extensibility of digital currencies.
 </p>
 <p>
 Circum augments the traditional payments business model by interposing sponsored marketing and advertising spends to reward consumers and subsidizing payment fees.
 </p>
 <p>
-circum.world opens up a new world of opportunity to remove the friction in transacting and ushers in wider financial inclusion across a much tighter value chain. Together we’re turning the traditional payments and advertising models on their heads by allowing individuals to also earn for their personal time, attention or calls to action.
-</p>
+circum.world opens up a new world of opportunity to remove the friction in transacting and ushers in wider financial inclusion across a much tighter value chain. Together we're turning the traditional payments and advertising models on their heads by allowing individuals to also earn for their personal time, attention or calls to action.</p>
 <p>
 Finally, the internet working for you, not you working for the Internet.
 </p>
