--- a/css/sass/modules/controls.sass
+++ b/css/sass/modules/controls.sass
@@ -2,7 +2,7 @@
     height: 64px
     display: inline-block  
     line-height: 20px
-    padding: 22px 45px
+    padding: 22px 35px
     font-weight: 700
     color: #fff
     border: 0
@@ -12,7 +12,7 @@
     
     @media (max-width: 1349px)
         height: 50px
-        padding: 15px 35px
+        padding: 15px 25px
 
     @media( max-width: 767px)
         height: 40px
@@ -21,7 +21,7 @@
 
     @media( max-width: 440px)
         height: 35px
-        padding: 8px 15px
+        padding: 8px 12px
     
     &-primary
         background-color: $primary-color
@@ -37,6 +37,28 @@
             background-color: $primary-color
             color: #fff
             border-color: $primary-color 
+
+    span 
+        display: inline-block
+        vertical-align: middle
+    svg 
+        display: inline-block
+        vertical-align: middle
+        width: 24px
+        height: 24px
+        margin-right: 10px
+        @media (max-width: 1349px)
+            width: 20px
+            height: 20px
+        @media( max-width: 440px)
+            width: 16px
+            height: 16px
+        @media( max-width: 360px)
+            width: 10px
+            height: 10px
+            margin-right: 5px
+        path 
+            fill: #ffffff
 
 
 
