--- a/css/sass/modules/section.sass
+++ b/css/sass/modules/section.sass
@@ -136,3 +136,28 @@
 	background-image: url(../images/bg-f-1.png), url(../images/bg-f-2.png) 
 	background-position: 0 0%, 100% 0%
 	background-repeat: no-repeat, no-repeat
+
+
+.form-success
+	width: 100%
+	height: 100vh
+	display: flex
+	align-items: center
+	justify-content: center
+	background-image: url("../images/offer-beacon.png") 
+	background-size: cover
+	background-repeat: no-repeat 
+	background-position: 0 100% 
+	
+	.message
+		width: 100%
+		padding: 0 15px
+		text-align: center
+		max-width: 750px 
+		
+		h2
+			font-size: 2em
+			margin-bottom: 1em  
+			
+		p
+			margin-bottom: 4em 
