--- a/css/sass/modules/controls.sass
+++ b/css/sass/modules/controls.sass
@@ -60,6 +60,10 @@
         path 
             fill: #ffffff
 
+    &-litepaper
+        margin: 60px auto 40px
+        position: relative
+        z-index: 10
 
 
 
