--- a/css/sass/modules/header.sass
+++ b/css/sass/modules/header.sass
@@ -24,27 +24,33 @@
 
 	@media( max-width: 991px)
 		.logo
-			width: 160px	
+			width: 140px	
 	@media( max-width: 767px)
 		height: 80px	
 	@media( max-width: 767px)
 		.logo
 			width: 100px
+		.btn 
+			height: 30px
+			padding: 0 
+			width: 30px
+			height: 30px
+			border-radius: 50%
+			font-size: 0px
+			font-weight: 400
+			display: flex
+			align-items: center
+			svg 
+				margin: 0 auto
+				width: 10px
+				height: 10px
 	@media( max-width: 440px)
 		height: 60px	
 		.logo
 			width: 80px
 	@media( max-width: 400px)
 		.logo
-			width: 60px	
-		.btn 
-			height: 30px
-			padding: 4px 12px
-			font-size: 10px
-			font-weight: 400
-			svg 
-				display: none
-
+			width: 60px
 
 .headroom--unpinned
     transform: translateY(-100%)
