--- a/css/sass/modules/blocks.sass
+++ b/css/sass/modules/blocks.sass
@@ -1,7 +1,9 @@
 .faq-list
-	columns: 3
-	column-gap: 40px
-	margin-bottom: -40px 
+	display: flex
+	justify-content: flex-start
+	align-items: top
+	flex-wrap: wrap
+	width: 100%
 	
 	@media (max-width: 1199px)
 		column-gap: 30px
@@ -15,6 +17,8 @@
 		margin-bottom: -20px 
 	
 	.faq-item
+		margin: 20px
+		width: calc(33.333% - 40px)
 		display: inline-block
 		margin-bottom: 40px 
 		border: 1px solid #A9E1D8
@@ -24,14 +28,21 @@
 		font-weight: 600 
 		font-size: 16px
 		line-height: 1.9em  
+		height: 307px
+		overflow: hidden
 		
 		@media (max-width: 1199px)
 			margin-bottom: 30px
 			padding: 1.5em
 			font-size: 14px  
+			width: calc(50% - 30px)
+			margin: 15px
+			height: 200px
 			
 		@media (max-width: 767px)
 			font-weight: 400 
+			width: 100%
+			margin: 15px auto
 			
 		@media (max-width: 575px)
 			font-size: 12px
@@ -48,6 +59,12 @@
 			
 		p:not(:last-child)
 			margin-bottom: 1.0em 
+
+		a 
+			color: #ffffff
+			text-decoration: underline
+			&:hover
+				text-decoration: none
 			
 
 
